# Nexus

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  PROJECT_BRIEF.md  README.md  ios-build.sh  package-lock.json  package.json
apps/TimeTrackerApp/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/TimeTrackerApp/src-tauri/capabilities/: default.json
apps/TimeTrackerApp/src-tauri/ios/: ContentBlockerBridge.swift  LiveActivitiesBridge.swift  TimerAttributes.swift  WidgetBridge.swift
apps/TimeTrackerApp/src-tauri/ios/SafariBlockerExtension/: Info.plist  SafariBlocker.entitlements  SafariContentBlockerHandler.swift  blockerList.json
apps/TimeTrackerApp/src-tauri/ios/TimerWidgetExtension/: ActiveTimerWidget.swift  Info.plist  QuickSessionWidget.swift  QuickStartWidget.swift  SharedTimerState.swift  SupabaseClient.swift  TimerLiveActivity.swift  TimerProvider.swift  TimerWidgetBundle.swift
apps/TimeTrackerApp/src-tauri/src/: lib.rs  main.rs
apps/TimeTrackerApp/src-tauri/src/blocker/: hosts.rs  ios_content_blocker.rs  mod.rs
apps/TimeTrackerApp/src-tauri/src/commands/: app_blocker_commands.rs  categories_commands.rs  config_commands.rs  entry_commands.rs  export_commands.rs  goal_commands.rs  mod.rs  schedule_commands.rs  site_blocker_commands.rs  sync_commands.rs  template_commands.rs  timer_commands.rs  user_commands.rs  widget_commands.rs
apps/TimeTrackerApp/src-tauri/src/config/: mod.rs  settings.rs
apps/TimeTrackerApp/src-tauri/src/db/: app_blocker.rs  connection.rs  entries.rs  goals.rs  migrations.rs  mod.rs  schedule.rs  site_blocker.rs  statistics.rs  templates.rs  timer.rs  users.rs
apps/TimeTrackerApp/src-tauri/src/live_activities/: mod.rs
apps/TimeTrackerApp/src-tauri/src/models/: mod.rs
apps/TimeTrackerApp/src-tauri/src/sync/: active_session.rs  blocking.rs  device.rs  mod.rs  supabase.rs
src-tauri/: Cargo.toml  (+1 more)
(+247 files in other folders)
