[workspace]
members = [
    "apps/nexus/src-tauri",
    "apps/PathFinder/src-tauri",
    "apps/Vault/Vault/src-tauri",
    "apps/TimeTrackerApp/src-tauri",
    "apps/Stonks/src-tauri",
    "apps/Protocol/src-tauri",
    "packages/nexus-core/crate",
]
resolver = "2"

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
