[package]
name = "timetracker-app"
version = "1.0.0"
description = "TimeTracker — Tauri desktop app"
authors = []
edition = "2021"

[lib]
name = "timetracker_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "timetracker-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"
urlencoding = "2"

# tray-icon is not supported on iOS — only enable it for non-iOS targets
[target.'cfg(not(target_os = "ios"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }

# macos-private-api and ObjC/raw-window-handle are macOS-only
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
objc = "0.2"
raw-window-handle = "0.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
